Adding option to choose target property

--- a/config.yaml
+++ b/config.yaml
@@ -18,7 +18,8 @@ model:
   transfer_learn: False
 data:
   dataset: gwset
-  data_path: GWSet 
+  data_path: GWSet
+  target: GAP 
   num_train: 117000
   num_val: 10000
 training:
