--- a/config.yaml
+++ b/config.yaml
@@ -1,34 +1,34 @@
 model:
-  lmax: 1
+  lmax: 2
   vecnorm_type: None
   trainable_vecnorm: False
   num_heads: 4
-  hidden_channels: 32
+  hidden_channels: 64
   num_rbf: 25
   rbf_type: gauss
   trainable_rbf: False
   activation: silu
   attn_activation: silu
-  max_z: 83
+  max_z: 10 # 86 for QCML, 54 for OMol25, 10 for GWSet
   cutoff: 5.0
   num_layers: 3
   max_num_neighbors: 100
   load_model: False
-  model_path: visnet_logs/model.ckpt
+  model_path: None
   transfer_learn: False
 data:
   dataset: gwset
   data_path: GWSet
-  target: DELTAHOMO
-  num_train: 117000
+  target: HOMO
+  num_train: 10000
   num_val: 10000
 training:
   device: cpu
   log_dir: visnet_logs
   batch_size: 10
-  num_epochs: 55
+  num_epochs: 50
   num_warmup_epochs: 5
   lr_start: 0.00001
-  lr_max: 0.0003
+  lr_max: 0.0005
   eta_min: 0.00001
   weight_decay: 0.001
