--- a/config.yaml
+++ b/config.yaml
@@ -20,10 +20,10 @@ data:
   dataset: gwset
   data_path: GWSet
   target: HOMO
-  num_train: 117000
-  num_val: 10000
-  num_test: 1
-  remove_charged: False
+  num_train: 1000
+  num_val: 100
+  num_test: 100
+  remove_charged: True
 training:
   device: cpu
   log_dir: visnet_logs
