--- a/config.yaml
+++ b/config.yaml
@@ -9,28 +9,28 @@ model:
   trainable_rbf: False
   activation: silu
   attn_activation: silu
-  max_z: 83 # 86 for QCML, 54 for OMol25, 10 for GWSet
+  max_z: 83
   cutoff: 5.0
   num_layers: 3
   max_num_neighbors: 100
-  load_model: False
-  model_path: None
-  transfer_learn: False
+  load_model: True
+  model_path: /workspace/ViSNetGW/gapbse0M128502532_transfer_converged/pretrained.ckpt
+  transfer_learn: True
 data:
-  dataset: gwset
-  data_path: /Users/dario/ViSNetGW/GWSet_80000_train_seed_84
-  target: GAP
-  num_train: 80000
-  num_val: 10000
-  num_test: 2885
+  dataset: qcdge
+  data_path: /Volumes/LaCie/QCDGE/for_training/QCDGE
+  target: E
+  num_train: 400000
+  num_val: 41404
+  num_test: 0
   remove_charged: False
 training:
-  device: cpu
+  device: cuda
   log_dir: visnet_logs
-  batch_size: 8
-  num_epochs: 4
-  num_warmup_epochs: 2
-  lr_start: 0.00001
+  batch_size: 256
+  num_epochs: 75
+  num_warmup_epochs: 5
+  lr_start: 0.000001
   lr_max: 0.0005
-  eta_min: 0.00001
+  eta_min: 0.0001
   weight_decay: 0.001
