Add reference, remove trial files

--- a/config.yaml
+++ b/config.yaml
@@ -3,7 +3,7 @@ model:
   vecnorm_type: None
   trainable_vecnorm: False
   num_heads: 4
-  hidden_channels: 128
+  hidden_channels: 216
   num_rbf: 25
   rbf_type: gauss
   trainable_rbf: False
@@ -13,24 +13,24 @@ model:
   cutoff: 5.0
   num_layers: 3
   max_num_neighbors: 100
-  load_model: True
-  model_path: /workspace/ViSNetGW/gapbse0M128502532_transfer_converged/pretrained.ckpt
+  load_model: False
+  model_path: None
   transfer_learn: True
 data:
-  dataset: qcdge
-  data_path: /Volumes/LaCie/QCDGE/for_training/QCDGE
-  target: E
-  num_train: 400000
-  num_val: 41404
-  num_test: 0
+  dataset: gwset
+  data_path: QM9GWBSE
+  target: HOMO
+  num_train: 120000
+  num_val: 10000
+  num_test: 3885
   remove_charged: False
 training:
-  device: cuda
+  device: cpu
   log_dir: visnet_logs
-  batch_size: 256
-  num_epochs: 75
+  batch_size: 16
+  num_epochs: 50
   num_warmup_epochs: 5
   lr_start: 0.000001
-  lr_max: 0.0005
-  eta_min: 0.0001
+  lr_max: 0.0003
+  eta_min: 0.00001
   weight_decay: 0.001
